FIX: utilisation pour un meilleur contrôle du temps lors des tests