@@ -4,15 +4,16 @@ import com.cda.carpooling.entity.Person;
 import com.cda.carpooling.entity.Role;
 import com.nimbusds.jose.jwk.source.ImmutableSecret;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.oauth2.core.DelegatingOAuth2TokenValidator;
 import org.springframework.security.oauth2.jose.jws.MacAlgorithm;
 import org.springframework.security.oauth2.jwt.*;
 import org.springframework.stereotype.Service;
 
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
+import java.time.Clock;
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Service de gestion des JWT .
@@ -20,6 +21,7 @@ import java.util.stream.Collectors;
  */
 @Service
 public class JwtService {
+    private final Clock clock;
 
     @Value("${jwt.secret-key}")
     private String secretKey;
@@ -36,11 +38,13 @@ public class JwtService {
     public JwtService(
             @Value("${jwt.secret-key}") String secretKey,
             @Value("${jwt.issuer}") String issuer,
-            @Value("${jwt.expiration-ms}") long expirationMs) {
+            @Value("${jwt.expiration-ms}") long expirationMs,
+            Clock clock) {
 
         this.secretKey = secretKey;
         this.issuer = issuer;
         this.expirationMs = expirationMs;
+        this.clock = clock;
 
         SecretKey key = new SecretKeySpec(secretKey.getBytes(), "HmacSHA256");
 
@@ -48,22 +52,34 @@ public class JwtService {
                 new ImmutableSecret<>(key)
         );
 
-        this.jwtDecoder = NimbusJwtDecoder
+        NimbusJwtDecoder decoder = NimbusJwtDecoder
                 .withSecretKey(key)
                 .macAlgorithm(MacAlgorithm.HS256)
                 .build();
+
+        JwtTimestampValidator timestampValidator = new JwtTimestampValidator();
+        timestampValidator.setClock(this.clock);
+
+        decoder.setJwtValidator(
+                new DelegatingOAuth2TokenValidator<>(
+                        JwtValidators.createDefaultWithIssuer(issuer),
+                        timestampValidator
+                )
+        );
+
+        this.jwtDecoder = decoder;
     }
 
     /**
      * Génère un JWT pour une personne.
      */
     public String generateToken(Person person) {
-        Instant now = Instant.now();
+        Instant now = clock.instant();
         Instant expiry = now.plusMillis(expirationMs);
 
         List<String> roles = person.getRoles().stream()
                 .map(Role::getLabel)
-                .collect(Collectors.toList());
+                .toList();
 
         JwtClaimsSet claims = JwtClaimsSet.builder()
                 .issuer(issuer)
